# seo-content-factory

./: .env.example  .gitignore  AUDIT_EXPERT_REPORT.md  Makefile  README.md  REPORT.md  pyproject.toml  requirements-lock.txt
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  CONTRACTS.md  DEMO_60S.md  DEMO_SCENARIOS.md  INDEX.md  LOCAL_SETUP.md  N8N_SETUP.md  PRD.md  PROJECT_MAP.md  RELEASE_CHECKLIST.md  SCOPE.md
escape-test/: x.html
escape-test/j/: meta.json  page.md  quality_report.json
fixtures/: demo_batch.csv
fixtures/pages/: demo_a.html  demo_b_1.html  demo_b_2.html  demo_b_3.html
infra/n8n/: .env.example  docker-compose.yml
infra/n8n/.n8n/: config  database.sqlite  database.sqlite-shm  database.sqlite-wal
reports/: AUDIT_EXPERT_REPORT_1.md  REPORT.md
src/seo_factory/: __init__.py  cli.py  config.py  validation.py
src/seo_factory/api/: __init__.py  app.py  ui_page.py
src/seo_factory/domain/: models.py
src/seo_factory/extractors/: html_fixture.py
src/seo_factory/generators/: template.py
src/seo_factory/pipeline/: batch_runner.py  orchestrator.py
src/seo_factory/quality/: rules.py
src/seo_factory/storage/: fs.py
tests/: conftest.py  test_api_smoke.py  test_api_validation.py  test_batch_order.py  test_determinism.py  test_imports.py  test_slugify.py
workflows/n8n/: seo_factory_demo.json
